# albreht_foot_analysis

./: .gitignore  1752497179693.tif  README.md  bot.py  code_octave_process.m  foot_diagnose_table.yml  main.py  main2.py  project-1-at-2025-09-03-20-45-48dde6f7.json  pyproject.toml  Чертеж.cdw  чертеж_боковая_проекция_стопы.cdw
обработка изображений/: 1-ая и 2-ая производные.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled10.ipynb  Untitled11.ipynb  Untitled12.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled8.ipynb  Untitled9.ipynb  plantogram_analysis.ipynb  разделение изображения на левую и правую стопу.ipynb
обработка изображений/плантограммы/: foot_measurements.csv
