[project]
name = "albreht"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "deplacy>=2.1.1",
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "kaggle>=1.8.3",
    "kagglehub>=0.4.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pip>=25.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "spacytextblob>=5.1.0",
    "textblob>=0.19.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
